--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,18 @@
 ---
 name: Exception-Lite
-version: 0.999_001
+version: 0.999_002
 author:
   - Elizabeth Grace Frank-Backman
-abstract: ~
+abstract: 'light weight exception handling class with smart stack tracing, chaining, and localization support'
 license: perl
+resources:
+  license: http://dev.perl.org/licenses/
 requires:
   perl: '>= 5.8.8'
 provides:
-  DB:
-    file: lib/Exception/Lite.pm
   Exception::Lite:
     file: lib/Exception/Lite.pm
-generated_by: Module::Build version 0.26
+generated_by: Module::Build version 0.280801
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
